Sat Jun 28 20:50:35 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_str_new2, rb_tainted_str_new2,
	  rb_usascii_str_new2): use inline versions for gcc 4 or lator.

Sat Jun 28 13:12:06 2008  Tanaka Akira  <akr@fsij.org>

	* test/rubygems/test_gem.rb (test_self_path_APPLE_GEM_HOME): don't use
	  fixed /tmp/apple_gem_home directory.

Sat Jun 28 08:40:18 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c : check String encoding when
	  converting String to VT_BSTR in OLE.

	* test/win32ole/test_win32ole.rb : ditto.

Sat Jun 28 01:08:42 2008  Tanaka Akira  <akr@fsij.org>

	* time.c (time_timespec): fix rounding negative float.

Fri Jun 27 21:38:57 2008  Tanaka Akira  <akr@fsij.org>

	* struct.c: __size__ removed.  use the length of __members__ instead.
	  (num_members): new function.

Fri Jun 27 21:19:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/inlinetest.rb (InlineTest.in_progname): workaround for frozen
	  $0.  [ruby-dev:35261]

	* lib/test/unit/ui/console/testrunner.rb (TestRunner#finished): ditto.

Fri Jun 27 17:45:17 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/erb.rb: adjust line number for magic comment.

	* test/erb/test_erb.rb: add tests for def_method.

Fri Jun 27 14:29:07 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (primary): empty not should call '!' on nil.
	  cf [ruby-dev:35227]

Fri Jun 27 14:25:52 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (vm_eval_body): if thrown exception is frozen, reraise it to
	  create a new instance.

Fri Jun 27 13:29:26 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_str_new2, rb_tainted_str_new2,
	  rb_usascii_str_new2): use with-length versions with strlen to
	  optimize strlen, if optimized.

Fri Jun 27 13:10:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: need to check sigaltstack and others regardless
	  ucontext.

Fri Jun 27 12:28:57 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
